data_url/data_url_9100.txt
When trying to compile on mac, I get the following error:
[ 24%] Building CXX object CMakeFiles/stim_benchmark.dir/src/simulators/measure_record_batch_writer.cc.o
In file included from /Users/mgnewman/miscellaneous/Stim/src/simulators/measure_record_batch_writer.cc:17:
In file included from /Users/mgnewman/miscellaneous/Stim/src/simulators/measure_record_batch_writer.h:20:
In file included from /Users/mgnewman/miscellaneous/Stim/src/simulators/../simd/simd_bit_table.h:20:
In file included from /Users/mgnewman/miscellaneous/Stim/src/simulators/../simd/simd_bits.h:21:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/random:1641:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/algorithm:643:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:2338:5: error:
delete called on 'MeasureRecordWriter' that is abstract but has
non-virtual destructor [-Werror,-Wdelete-abstract-non-virtual-dtor]
delete __ptr;
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:2651:7: note:
in instantiation of member function
'std::__1::default_delete::operator()' requested here
_ptr.second()(__tmp);
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:2605:19: note:
in instantiation of member function
'std::__1::unique_ptr<MeasureRecordWriter,
std::__1::default_delete >::reset' requested here
~unique_ptr() { reset(); }
^
/Users/mgnewman/miscellaneous/Stim/src/simulators/measure_record_batch_writer.cc:33:27: note:
in instantiation of member function
'std::__1::unique_ptr<MeasureRecordWriter,
std::__1::default_delete >::~unique_ptr' requested
here
writers.push_back(MeasureRecordWriter::make(out, f));
^
1 error generated.
make[2]: *** [CMakeFiles/stim_benchmark.dir/src/simulators/measure_record_batch_writer.cc.o] Error 1
make[1]: *** [CMakeFiles/stim_benchmark.dir/all] Error 2
make: *** [all] Error 2
The amazing thing is that so many other compilers just let this slide. Will fix.
